complete switch to JDK25